--- a/chat.html
+++ b/chat.html
@@ -13,8 +13,14 @@
     <div class="message clearfix receive">
       <img src="http://we.plus.sogou:8888/static/c9cc8f7a/images/headshot.png" alt="" class="message-avatar" />
       <div class="message-content-container">
-        <div class="message-content">
-          Revceive Message Revceive Message Revceive Message Revceive Message
+        <div class="message-content taocan">
+          <div>和4G套餐新资费全新上市，轻松进入G时代，套餐分为：</div>
+          <div class="price-list mt-1">
+            <div class="price-item">38元</div>
+            <div class="price-item">58元</div>
+            <div class="price-item">88元</div>
+            <div class="price-item">108元</div>
+          </div>
         </div>
       </div>
     </div>
