--- a/chat.html
+++ b/chat.html
@@ -15,11 +15,31 @@
       <div class="message-content-container">
         <div class="message-content taocan">
           <div>和4G套餐新资费全新上市，轻松进入G时代，套餐分为：</div>
+
           <div class="price-list mt-1">
-            <div class="price-item">38元</div>
-            <div class="price-item">58元</div>
-            <div class="price-item">88元</div>
-            <div class="price-item">108元</div>
+            <a href="#" class="price-item">38元</a>
+            <a href="#" class="price-item">58元</a>
+            <a href="#" class="price-item">88元</a>
+            <a href="#" class="price-item">108元</a>
+            <a href="#" class="price-item">128元</a>
+          </div>
+
+          <div class="mt-1">
+            <div>可点击“38元和4G套餐”了解各档介绍及办理方式</div>
+            <div class="text-sm">
+              1、各档套餐赠送一定国内主叫时长和数据流量（适用2/3/4G网络）<br />
+              2、国内免费接听。套餐主、被叫和数据流量均不含港澳台
+            </div>
+          </div>
+
+          <div class="mt-1">
+            <div>猜您可能还需如下服务：</div>
+            <div class="recommend-list">
+              <a href="#" class="recommend-item">任我用套餐</a>
+              <a href="#" class="recommend-item">我的套餐用了多少</a><br />
+              <a href="#" class="recommend-item">MO套餐介绍</a>
+              <a href="#" class="recommend-item">算套餐</a>
+            </div>
           </div>
         </div>
       </div>
