--- a/chat.html
+++ b/chat.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, user-scalable=no" />
   <title>chat</title>
   <link rel="stylesheet" href="./normalize.css">
-  <link rel="stylesheet" href="./chat.css">
+  <link rel="stylesheet" href="./chat.css?2">
   <script type="text/javascript" src="./jquery-1.8.0.min.js"></script>
 </head>
 <body>
@@ -13,32 +13,34 @@
     <div class="message clearfix receive">
       <img src="http://we.plus.sogou:8888/static/c9cc8f7a/images/headshot.png" alt="" class="message-avatar" />
       <div class="message-content-container">
-        <div class="message-content taocan">
-          <div>和4G套餐新资费全新上市，轻松进入G时代，套餐分为：</div>
+        <div class="message-content">
+          <div class="taocan">
+            <div>和4G套餐新资费全新上市，轻松进入G时代，套餐分为：</div>
 
-          <div class="price-list mt-1">
-            <a href="#" class="price-item">38元</a>
-            <a href="#" class="price-item">58元</a>
-            <a href="#" class="price-item">88元</a>
-            <a href="#" class="price-item">108元</a>
-            <a href="#" class="price-item">128元</a>
-          </div>
-
-          <div class="mt-1">
-            <div>可点击“38元和4G套餐”了解各档介绍及办理方式</div>
-            <div class="text-sm">
-              1、各档套餐赠送一定国内主叫时长和数据流量（适用2/3/4G网络）<br />
-              2、国内免费接听。套餐主、被叫和数据流量均不含港澳台
+            <div class="price-list mt-1">
+              <a href="#" class="price-item">38元</a>
+              <a href="#" class="price-item">58元</a>
+              <a href="#" class="price-item">88元</a>
+              <a href="#" class="price-item">108元</a>
+              <a href="#" class="price-item">128元</a>
             </div>
-          </div>
 
-          <div class="mt-1">
-            <div>猜您可能还需如下服务：</div>
-            <div class="recommend-list">
-              <a href="#" class="recommend-item">任我用套餐</a>
-              <a href="#" class="recommend-item">我的套餐用了多少</a><br />
-              <a href="#" class="recommend-item">MO套餐介绍</a>
-              <a href="#" class="recommend-item">算套餐</a>
+            <div class="mt-1">
+              <div>可点击“38元和4G套餐”了解各档介绍及办理方式</div>
+              <div class="text-sm">
+                1、各档套餐赠送一定国内主叫时长和数据流量（适用2/3/4G网络）<br />
+                2、国内免费接听。套餐主、被叫和数据流量均不含港澳台
+              </div>
+            </div>
+
+            <div class="mt-1">
+              <div>猜您可能还需如下服务：</div>
+              <div class="recommend-list">
+                <a href="#" class="recommend-item">任我用套餐</a>
+                <a href="#" class="recommend-item">我的套餐用了多少</a><br />
+                <a href="#" class="recommend-item">MO套餐介绍</a>
+                <a href="#" class="recommend-item">算套餐</a>
+              </div>
             </div>
           </div>
         </div>
